syntax="proto3";

option go_package="blog/proto";
package blog;

message Empty {}

message Blog {
  string id=1;
  string author_id=2;
  string title=3;
  string content=4;
}

message BlogId {
  string id=1;
}

service BlogService {
  rpc CreateBlog (Blog) returns (BlogId);
  rpc ReadBlog (BlogId) returns (Blog);
  rpc UpdateBlog (Blog) returns (Empty);
  rpc DeleteBlog (BlogId) returns (Empty);
  rpc ListBlogs (Empty) returns (stream Blog);
}